--- a/css/override.css
+++ b/css/override.css
@@ -1,3 +1,21 @@
 .navbar .nav{
     float: right;
 }
+div {
+    font-size: 1.1em;
+}
+div font {
+    font-size: inherit;
+}
+
+.modal-dialog {
+       top: 250px;
+}
+
+.modal-header .close {
+    margin-right: 0;
+}   
+
+.modal-title {
+    margin: 0px auto;
+}
