--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,6 @@
     background-color: rgba(100,100,100,0.4);
 }
 
-
 .navbar{
     border-radius: 0;
     padding: 0;
@@ -33,4 +32,8 @@
 
 .container-btn-add-right{
     float: right;
+}
+
+.login-container{
+    width: 500px;
 }
