--- a/css/override.css
+++ b/css/override.css
@@ -1,6 +1,17 @@
 .navbar .nav{
     float: right;
 }
+
+body {
+    font-size: 1.2em;
+    color: #424242
+}
+body font {
+    font-size: inherit;
+    
+}
+
+/*
 div {
     font-size: 1.1em;
 }
@@ -9,12 +20,28 @@ div font {
 }
 
 label {
-    font-size: 1.2rem;
+    font-size: 1.1rem;
     font-weight: 500;
 }
-
+label font {
+    font-size: inherit;
+}
+input {
+    font-size: 1.1rem;
+    font-weight: 500;
+}
+input font {
+    font-size: inherit;
+}
+option {
+    font-size: 1.1rem;
+    font-weight: 500;
+}
+option font {
+    font-size: inherit;
+}*/
 .modal-dialog {
-       top: 250px;
+       top: 200px;
 }
 
 .modal-header .close {
@@ -25,10 +52,25 @@ label {
     margin: 0px auto;
 }
 
+.modal-body {
+    padding-left: 20px;
+    padding-right: 20px;
+}
+.modal-content.contentmap {
+    width: 150%;
+    left: -20%;
+}
+.modal-body.mapbody {
+    padding: 5px;
+    width:100%;
+    height:500px;
+}
 /* override bootgrid (table) */
 .search.form-group{
     display: none;
 }
+
+
 
 .actions.btn-group{
     display: none;
@@ -37,3 +79,52 @@ label {
 .form-check-label{
     margin-left: 20px;
 }
+
+
+.modal-backdrop.fade {
+    opacity: 0.5;
+}
+
+
+.controls {
+    border: 1px solid transparent;
+    border-radius: 2px 0 0 2px;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    height: 32px;
+    outline: none;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+
+  }
+  #pac-input {
+    background-color: #fff;
+    padding: 0 11px 0 13px;
+    width: 100%;
+    font-family: Roboto;
+    font-size: 15px;
+    font-weight: 300;
+    text-overflow: ellipsis;
+  }
+  #pac-input:focus {
+    border-color: #4d90fe;
+
+  }
+  .pac-container {
+    font-family: Roboto;
+    z-index: 1000; position:relative;
+  }
+  #type-selector {
+    color: #fff;
+    background-color: #4d90fe;
+    padding: 5px 11px 0px 11px;
+  }
+  #type-selector label {
+    font-family: Roboto;
+    font-size: 13px;
+    font-weight: 300;
+  }
+  .modal-header .close {
+    margin: -1rem -1rem -1rem -1rem;
+}
+
+
