--- a/css/style.css
+++ b/css/style.css
@@ -85,7 +85,7 @@
 }
 
 .map {
-    height:94%;
+    height:100%;
     
 }
 
@@ -144,26 +144,40 @@
 }
 /* table scroll*/
 table.scroll {
-    /* width: 100%; */ /* Optional */
+    width: 100%; /* Optional */
     /* border-collapse: collapse; */
     border-spacing: 0;
     border: 1px solid lightgray;
 }
 
 table.scroll tbody,
-table.scroll thead { display: block; }
+table.scroll thead, 
+table.scroll tr { display: block; }
 
-thead tr th { 
+table.scroll td.text-left, 
+table.scroll th.text-left{
+    display:inline-block;
+    overflow:hidden !important;
+    text-overflow: ellipsis;
+}
+
+table.scroll tbody {
+    width: 100%;
+    height: 120px;
+    overflow-y: auto;
+    
+    /*
+    overflow-x: hidden;*/
+}
+
+table.scroll thead tr th { 
+    width: 100%;
     height: 30px;
     line-height: 30px;
     /* text-align: left; */
 }
 
-table.scroll tbody {
-    height: 120px;
-    overflow-y: auto;
-    overflow-x: hidden;
-}
+
 
 div.container-center {
     position: relative }
