--- a/css/style.css
+++ b/css/style.css
@@ -206,7 +206,7 @@ div.container-center p {
 }
 
 .h2.inner-tab {
-    margin-left:-40px;
+    margin-left:0px;
     padding:10px;
 }
 .box-scroll{
@@ -215,4 +215,9 @@ div.container-center p {
     width: 100%;
     height: 100px;
     overflow-y: auto;
+}
+
+.right {
+    float: right;
+    padding: 10px;
 }
