--- a/css/override.css
+++ b/css/override.css
@@ -150,3 +150,12 @@ td.text-left {
 .table-hover tbody tr{
     cursor: pointer;
 }
+
+.bootgrid-table td  {
+    white-space:pre-wrap; 
+    word-wrap:break-word;
+}
+
+.bootgrid-table thead{
+    background-color: #c5e6f8;
+}
