--- a/css/override.css
+++ b/css/override.css
@@ -109,6 +109,19 @@ option font {
     border-color: #4d90fe;
 
   }
+  .pac-input {
+    background-color: #fff;
+    padding: 0 11px 0 13px;
+    width: 100%;
+    font-family: Roboto;
+    font-size: 15px;
+    font-weight: 300;
+    text-overflow: ellipsis;
+  }
+  .pac-input:focus {
+    border-color: #4d90fe;
+
+  }
   .pac-container {
     font-family: Roboto;
     z-index: 1000; position:relative;
