--- a/css/style.css
+++ b/css/style.css
@@ -81,6 +81,18 @@
     left: 4px;
     top: 8px;
 }
+
+.fa-fullimage-o{
+    width: 20px;
+    height: 20px;
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    background-image: url("../images/icons8-full_image.png");
+    position: absolute;
+    left: 4px;
+    top: 8px;
+}
+
 .fa-waypoint{
     width: 20px;
     height: 20px;
@@ -298,4 +310,24 @@ div.container-center p {
 
 .dragorder {
     cursor:all-scroll;
+}
+
+img {
+    max-width: 100%;
+    max-height: 100%;
+}
+
+.portrait {
+    height: 80px;
+    width: 30px;
+}
+
+.landscape {
+    height: 30px;
+    width: 80px;
+}
+
+.square {
+    height: 75px;
+    width: 75px;
 }
